# WaypointNavigation

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
action/: FollowTarget.action
config/navigation/: base_local_planner_params.yaml  base_local_planner_params_slower.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml  move_base_params.yaml  move_base_slower.xml
config/paths/: experiment_1.path  robot_0.path  robot_1.path
maps/: DIAG_B1.world
nodes/: followTarget.py  robotpose.py
src/: WaypointNavigation.cpp  WaypointNavigation.h  WaypointNavigationNames.h
src/Utils/: Topics.h  Utils.cpp  Utils.h
