<?xml version="1.0"?>
<package>
	<name>WaypointNavigation</name>
	<version>0.0.0</version>
	<description>The WaypointNavigation package</description>
	<maintainer email="previtali@dis.uniroma1.it">Fabio Previtali</maintainer>
	<license>LGPLv3</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>rospy</build_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
</package>
